--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<style>
+	p{
+		margin:0 auto;
+		font-size:18px;
+		background-color:gray;
+	}
+	</style>
 </head>
 <body>
 	<p>我讲个笑话 你可千万别哭</p>
